--- a/Communication/4g.md
+++ b/Communication/4g.md
@@ -17,10 +17,19 @@
         - FSK Frequency
         - PSQ Phase
       - 한 symbol에 몇 bit를 보낼껀지? 1초에 몇개의 symbol (baud)를 보낼껀지?
-  - Multiple Access / 한 채널을 모든 ㅣ용자가 상호 접속할 수 있는 다중접속
-- Access Network
-- Core Network
-- Application
+  - Multiple Access / 한 채널을 모든 사용자가 상호 접속할 수 있는 다중접속
+    - OFDM(직교 주파수 다중 분할)(Orthogonal Frequency Division Multiplexing)
+      - 다수의 안테나를 사용해 데이터를 송수신하는 다중 안테나 신호처리 방식
+  - 고속 패킷 데잍터 전송방식 / MIMO가 대세이다 다중 입출력
+    - MIMO(Multiple Input Multiple Output)
+      - 하나의 채널을 여러개로 나누어 데이터를 전송할 수 있다.
+      - 서브 채널 간의 오버래핑으로 대역폭을 절약할 수 있다.
+      - 주파수 간섭의 영향을 덜 받는다. 
+- Access Network / 사용자들이 4G 네트워크에 접속할 수 있는 기술
+  - 셀 방식을 중심으로 Mesh 네트워크나 Adhoc네트워크 등의 기술을 포함
+- Core Network /  4g의 핵심이 될 코어 네트워크는 All - ip 네트워크가 될 것으로 보인다.
+- Application / 사용자들이 4G 단말기를 통해 유비쿼터스 브로드밴드 서비ㄹ스를 이용할 수 있도록 해주는 모바일 플랫폼과 각종 응요프로그램
+ 
 
 ## reference
 - https://itislord.tistory.com/322
