--- a/Communication/4g.md
+++ b/Communication/4g.md
@@ -30,6 +30,14 @@
 - Core Network /  4g의 핵심이 될 코어 네트워크는 All - ip 네트워크가 될 것으로 보인다.
 - Application / 사용자들이 4G 단말기를 통해 유비쿼터스 브로드밴드 서비ㄹ스를 이용할 수 있도록 해주는 모바일 플랫폼과 각종 응요프로그램
  
+ - SDR (Software Defined Radio)
+  - Software-defined radio (SDR) is a radio communication system where components that have been traditionally implemented in hardware (e.g. mixers, filters, amplifiers, modulators/demodulators, detectors, etc.) are instead implemented by means of software on a personal computer or embedded system.
+
+- air inter face or access mode - is the communication link between the two stations in mobile or wireless communication. The air interface involves both the physical and data link layers (layer 1 and 2) of the OSI model for a connection.
+  - Physical Layer
+  - Data link layer
+
+
 
 ## reference
 - https://itislord.tistory.com/322
